==> denisbohm/firefly-ice-firmware/instruments/src/nrf5/fdi_gpio_nrf5.c <==
#include "fdi_gpio.h"
#include "fdi_serial_wire.h"
#include "fd_delay.h"
#include "fd_gpio.h"
#include "fd_nrf5.h"
#define fdi_gpio_count (sizeof(fdi_gpios) / sizeof(fdi_gpios[0]))

bool fdi_gpio_get(uint32_t identifier) {
    fdi_gpio_t gpio = fdi_gpios[identifier];
    NRF_GPIO_Type *nrf_gpio = gpio.port;
    return ((nrf_gpio->IN >> gpio.pin) & 1UL) != 0;
}

void fdi_gpio_set_mode_in(uint32_t identifier) {
    fdi_gpio_configure(identifier,
        NRF_GPIO_PIN_DIR_INPUT,
        NRF_GPIO_PIN_INPUT_CONNECT,
        NRF_GPIO_PIN_NOPULL,
        NRF_GPIO_PIN_S0S1,
        NRF_GPIO_PIN_NOSENSE
    );
}

void fdi_gpio_set_mode_out(uint32_t identifier) {
    fdi_gpio_configure(identifier,
        NRF_GPIO_PIN_DIR_OUTPUT,
        NRF_GPIO_PIN_INPUT_DISCONNECT,
        NRF_GPIO_PIN_NOPULL,
        NRF_GPIO_PIN_S0S1,
        NRF_GPIO_PIN_NOSENSE
    );
}
