==> denisbohm/firefly-ice-firmware/instruments/src/stm32_cube/fdi_gpio.c <==
#include "fdi_gpio.h"
#include "fdi_stm32.h"
#include "fd_log.h"

bool fdi_gpio_get(uint32_t identifier) {
    fd_log_assert(identifier < fdi_gpio_count);

    fdi_gpio_t *gpio = &fdi_gpios[identifier];
    fd_log_assert(gpio->status != fdi_gpio_status_invalid);
    if (gpio->status != fdi_gpio_status_valid) {
        return false;
    }
    return (gpio->port->IDR & (1 << gpio->pin)) != 0;
}

void fdi_gpio_set_mode_in(uint32_t identifier) {
    fd_log_assert(identifier < fdi_gpio_count);

    fdi_gpio_t *gpio = &fdi_gpios[identifier];
    fd_log_assert(gpio->status != fdi_gpio_status_invalid);
    if (gpio->status != fdi_gpio_status_valid) {
        return;
    }
    fdi_gpio_set_mode(gpio->port, gpio->pin, fdi_gpio_mode_input);
}

void fdi_gpio_set_mode_out(uint32_t identifier) {
    fd_log_assert(identifier < fdi_gpio_count);

    fdi_gpio_t *gpio = &fdi_gpios[identifier];
    fd_log_assert(gpio->status != fdi_gpio_status_invalid);
    if (gpio->status != fdi_gpio_status_valid) {
        return;
    }
    fdi_gpio_set_mode(gpio->port, gpio->pin, fdi_gpio_mode_output);
}
